--- a/package.json
+++ b/package.json
@@ -16,19 +16,34 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
+    "@mdx-js/mdx": "^3.1.1",
+    "@mdx-js/react": "^3.1.1",
     "@medusajs/js-sdk": "^2.8.8",
     "@medusajs/ui": "latest",
     "@radix-ui/react-accordion": "^1.2.1",
     "@stripe/react-stripe-js": "^1.7.2",
     "@stripe/stripe-js": "^1.29.0",
+    "highlight.js": "^11.11.1",
     "lodash": "^4.17.21",
+    "mdx": "^0.3.1",
     "next": "^15.3.1",
+    "next-mdx-remote": "^5.0.0",
     "pg": "^8.11.3",
     "qs": "^6.12.1",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-country-flag": "^3.1.0",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-markdown": "^10.1.0",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-highlight": "^7.0.2",
+    "rehype-pretty-code": "^0.14.1",
+    "rehype-sanitize": "^6.0.0",
+    "rehype-slug": "^6.0.0",
+    "remark-breaks": "^4.0.0",
+    "remark-emoji": "^5.0.2",
+    "remark-gfm": "^4.0.1",
     "server-only": "^0.0.1",
+    "shiki": "^3.13.0",
     "tailwindcss-radix": "^2.8.0",
     "webpack": "^5"
   },
@@ -36,6 +51,7 @@
     "@babel/core": "^7.17.5",
     "@medusajs/types": "^2.8.8",
     "@medusajs/ui-preset": "latest",
+    "@tailwindcss/typography": "^0.5.18",
     "@types/lodash": "^4.14.195",
     "@types/node": "17.0.21",
     "@types/pg": "^8.11.0",
