--- a/.dockerignore
+++ b/.dockerignore
@@ -1,13 +1,15 @@
 node_modules
 .next
+.env.local
+.env
+.env.development.local
+.env.test.local
+.env.production.local
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 .git
 .gitignore
 README.md
 Dockerfile
 .dockerignore
-yarn.lock
-.yarn
-.yarnrc*
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
