--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 .vscode
 
 # dependencies
-/node_modules
+node_modules
 /.pnp
 .pnp.js
 
@@ -13,8 +13,8 @@
 /coverage
 
 # next.js
-/.next/
-/out/
+.next/
+out/
 
 # production
 /build
