--- a/package.json
+++ b/package.json
@@ -10,9 +10,8 @@
   "scripts": {
     "dev": "next dev --turbopack -p 8000",
     "build": "next build",
-    "start": "next start -p 8000",
-    "lint": "next lint",
-    "analyze": "ANALYZE=true next build"
+    "start": "next start -p $PORT",
+    "lint": "next lint"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
