--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
-package-lock.json
+#package-lock.json eliminado del gitignore
 # local env files
 .env
 .env.local
