--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "dev": "next dev -p 8000",
     "build": "next build",
-    "start": "next start -p $PORT",
+    "start":"next start -p $PORT || next start -p 8000",
     "lint": "next lint"
   },
   "dependencies": {
